Drawing in Metal but no rotation yet. Need to put x/y transform into the transformation matrix and then compute rotation.

--- a/FlyingIconsShell copy-Info.plist
+++ b/FlyingIconsShell copy-Info.plist
@@ -27,7 +27,7 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2011 Consonance Software. All rights reserved.</string>
 	<key>NSMainNibFile</key>
-	<string>MainMenu-Metal</string>
+	<string>MainMenu-OpenGL</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>NSSupportsAutomaticGraphicsSwitching</key>
