--- a/FlyingIcons.xcodeproj/xcshareddata/xcschemes/FlyingIconsShell Metal.xcscheme
+++ b/FlyingIcons.xcodeproj/xcshareddata/xcschemes/FlyingIconsShell Metal.xcscheme
@@ -51,6 +51,13 @@
             ReferencedContainer = "container:FlyingIcons.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "CGBITMAP_CONTEXT_LOG_ERRORS"
+            value = "3"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
